fixed annoying overflow styling

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,16 @@
 *{
-    margin:0;
-    padding: 0;
+margin:0; padding:0;
 }
 html,body{
     height: 100%;
+    margin:0; padding:0;
+    overflow: hidden;
 }
 
 body{
-    background: linear-gradient(180deg,rgba(255, 250, 148, 1) 0%, rgba(244, 229, 123, 1) 70%, rgb(216, 194, 127) 98%);
-    min-height: 100dvh;
+    background: linear-gradient(180deg,rgba(255, 250, 148, 1) 0%, rgba(244, 229, 123, 1) 70%, rgb(216, 194, 127) 120%);
     display: flex;
     flex-direction: column;
-    /*justify-content: center;*/
     align-items: center;
     min-height:100dvh;
     width: 100%;    
